@@ -23,7 +23,7 @@ libgccjit 5.0.0 (experimental 20150113), January 13, 2015
 
 David Malcolm
 
-Copyright @copyright{} 2014, Free Software Foundation
+Copyright @copyright{} 2014-2015 Free Software Foundation, Inc.
 @end quotation
 
 @end copying
@@ -46,7 +46,7 @@ Copyright @copyright{} 2014, Free Software Foundation
 
 @c %**start of body
 @anchor{index doc}@anchor{0}
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -85,7 +85,7 @@ wrapper classes around the C API, to save typing.
 
 Contents:
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -334,7 +334,7 @@ Running the test suite
 @chapter Tutorial
 
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -377,7 +377,7 @@ the details in later parts of this tutorial.
 
 @example
 /* Smoketest example for libgccjit.so
-   Copyright (C) 2014 Free Software Foundation, Inc.
+   Copyright (C) 2014-2015 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -528,7 +528,7 @@ hello world
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -982,7 +982,7 @@ Here's what the above looks like as a complete program:
 
 @example
 /* Usage example for libgccjit.so
-   Copyright (C) 2014 Free Software Foundation, Inc.
+   Copyright (C) 2014-2015 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -1115,7 +1115,7 @@ result: 25
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -1586,7 +1586,7 @@ install it with @cite{yum install python-xdot}):
 
 @example
 /* Usage example for libgccjit.so
-   Copyright (C) 2014 Free Software Foundation, Inc.
+   Copyright (C) 2014-2015 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -1778,7 +1778,7 @@ loop_test returned: 285
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -3927,7 +3927,7 @@ instr9:
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -3949,7 +3949,7 @@ instr9:
 @chapter Topic Reference
 
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -4592,7 +4592,7 @@ The default value is 0 (unoptimized).
 @end deffn
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -4708,7 +4708,7 @@ object's context is released.
 @end cartouche
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -5154,7 +5154,7 @@ Populate the fields of a formerly-opaque struct type.
 This can only be called once on a given struct type.
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -6133,7 +6133,7 @@ PTR[INDEX]
 in C (or, indeed, to @code{PTR + INDEX}).
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -6510,7 +6510,7 @@ return;
 @noindent
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -6594,7 +6594,7 @@ argument is true, this will also set up @cite{gcc_jit_location} information
 throughout the context, pointing at the dump file as if it were a source
 file, giving you @emph{something} you can step through in the debugger.
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -6737,7 +6737,7 @@ by calling @pxref{17,,gcc_jit_result_get_code()} or
 @pxref{a8,,gcc_jit_result_get_global()} on it.
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -6775,7 +6775,7 @@ production yet.
 
 Contents:
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -6901,7 +6901,7 @@ Source Locations
 @section Tutorial
 
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -6944,7 +6944,7 @@ the details in later parts of this tutorial.
 
 @example
 /* Smoketest example for libgccjit.so C++ API
-   Copyright (C) 2014 Free Software Foundation, Inc.
+   Copyright (C) 2014-2015 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -7079,7 +7079,7 @@ hello world
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -7475,7 +7475,7 @@ Here's what the above looks like as a complete program:
 
 @example
 /* Usage example for libgccjit.so's C++ API
-   Copyright (C) 2014 Free Software Foundation, Inc.
+   Copyright (C) 2014-2015 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -7590,7 +7590,7 @@ result: 25
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -8092,7 +8092,7 @@ install it with @cite{yum install python-xdot}):
 
 @example
 /* Usage example for libgccjit.so's C++ API
-   Copyright (C) 2014 Free Software Foundation, Inc.
+   Copyright (C) 2014-2015 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -8249,7 +8249,7 @@ loop_test returned: 285
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -10155,7 +10155,7 @@ instr9:
 
 @noindent
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -10177,7 +10177,7 @@ instr9:
 @section Topic Reference
 
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -10491,7 +10491,7 @@ This is a thin wrapper around the C API
 meaning.
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -10588,7 +10588,7 @@ obj: 4.0 * (float)i
 @noindent
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -10842,7 +10842,7 @@ size of the struct is not known), or later specified using
 @pxref{79,,gcc_jit_struct_set_fields()}.
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -11711,7 +11711,7 @@ gccjit::lvalue element = array[0];
 @noindent
 @end quotation
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -12004,7 +12004,7 @@ return;
 @noindent
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -12085,7 +12085,7 @@ argument is true, this will also set up @cite{gccjit::location} information
 throughout the context, pointing at the dump file as if it were a source
 file, giving you @emph{something} you can step through in the debugger.
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
@@ -12140,7 +12140,7 @@ This cleans up the result; after calling this, it's no longer
 valid to use the result.
 @end deffn
 
-@c Copyright (C) 2014 Free Software Foundation, Inc.
+@c Copyright (C) 2014-2015 Free Software Foundation, Inc.
 @c Originally contributed by David Malcolm <dmalcolm@redhat.com>
 @c 
 @c This is free software: you can redistribute it and/or modify it
