@@ -1,5 +1,5 @@
 /* Smoketest example for libgccjit.so
-   Copyright (C) 2014 Free Software Foundation, Inc.
+   Copyright (C) 2014-2015 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
